do api requests in parallel

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,1 +1,12 @@
 # https://www.playframework.com/documentation/latest/Configuration
+akka {
+  actor {
+    default-dispatcher {
+      fork-join-executor {
+        parallelism-min = 8
+        parallelism-factor = 3.0
+        parallelism-max = 64
+      }
+    }
+  }
+}
