add cors header

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,4 +1,15 @@
 # https://www.playframework.com/documentation/latest/Configuration
+
+# CORS configuration
+play.filters.enabled += "play.filters.cors.CORSFilter"
+play.filters.cors {
+  allowedOrigins = ["http://localhost:3000", "http://localhost:8080", "http://localhost:5173"]
+  allowedHttpMethods = ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
+  allowedHttpHeaders = ["Accept", "Content-Type", "Origin", "X-Json", "X-Prototype-Version", "X-Requested-With"]
+  preflightMaxAge = 3 days
+  supportsCredentials = true
+}
+
 akka {
   actor {
     default-dispatcher {
