add localstack dynamodb for storing flight records

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -21,9 +21,14 @@ akka {
     }
   }
 }
-cache {
-  expiry {
-    duration = 1
-    unit = "HOURS"
-  }
+
+# Modules
+play.modules.enabled += "modules.DynamoDBModule"
+play.modules.enabled += "modules.StartupModule"
+play.modules.enabled += "modules.ServicesModule"
+
+# DynamoDB Configuration
+dynamodb {
+  endpoint = "http://localhost:4566"
+  region = "eu-west-1"
 }
