add request validator object

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -26,6 +26,7 @@ akka {
 play.modules.enabled += "modules.DynamoDBModule"
 play.modules.enabled += "modules.StartupModule"
 play.modules.enabled += "modules.ServicesModule"
+play.modules.enabled += "modules.ValidatorModule"
 
 # DynamoDB Configuration
 dynamodb {
