--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,27 @@ target
 /RUNNING_PID
 httpRequests/flightLabs/http-client.private.env.json
 volume/
+
+# Local .terraform directories
+**/.terraform/*
+
+# .tfstate files
+*.tfstate
+*.tfstate.*
+
+# Crash log files
+crash.log
+
+# Exclude override files as they are usually used to override resources locally
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+
+# Exclude CLI configuration files
+.terraformrc
+terraform.rc
+
+# Exclude variable files containing sensitive information
+terraform.tfvars
+*.auto.tfvars
