--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,4 +11,15 @@ services:
       - DATA_DIR=/tmp/localstack/data
     volumes:
       - "${LOCALSTACK_VOLUME_DIR:-./volume}:/var/lib/localstack"
-      - "/var/run/docker.sock:/var/run/docker.sock" 
+      - "/var/run/docker.sock:/var/run/docker.sock"
+
+  flight-backend:
+    build: .
+    ports:
+      - "9000:9000"
+    depends_on:
+      - localstack
+    environment:
+      - AWS_REGION=us-west-2
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
