--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -52,9 +52,15 @@ jobs:
     - name: Set up Docker
       uses: docker/setup-buildx-action@v2
       
+    - name: Install Docker Compose
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y docker-compose-plugin
+        docker compose version
+      
     - name: Start Docker Compose
       run: |
-        docker-compose up -d
+        docker compose up -d
         # Give the services some time to start up
         sleep 30
         
@@ -80,4 +86,4 @@ jobs:
     
     - name: Stop Docker Compose
       if: always()
-      run: docker-compose down 
+      run: docker compose down 
