--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -49,18 +49,15 @@ jobs:
         require_tests: true
         check_name: Test Results
         
-    - name: Set up Docker
+    - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
-      
-    - name: Install Docker Compose
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y docker-compose-plugin
-        docker compose version
+
+    - name: Set up Docker Compose
+      run: sudo apt-get update && sudo apt-get install docker-compose -y
       
     - name: Start Docker Compose
       run: |
-        docker compose up -d
+        docker-compose up -d
         # Give the services some time to start up
         sleep 30
         
